Source/WebKit/GPUProcess/media/cocoa/RemoteMediaPlayerProxyCocoa.mm
@@ -111,13 +111,20 @@ void RemoteMediaPlayerProxy::nativeImageForCurrentTime(CompletionHandler<void(st
     completionHandler(surface->createSendRight());
 }
 
-void RemoteMediaPlayerProxy::pixelBufferForCurrentTime(CompletionHandler<void(RetainPtr<CVPixelBufferRef>&&)>&& completionHandler)
+#if USE(AVFOUNDATION)
+void RemoteMediaPlayerProxy::pixelBufferForCurrentTimeIfChanged(CompletionHandler<void(std::optional<RetainPtr<CVPixelBufferRef>>&&)>&& completionHandler)
 {
-    RetainPtr<CVPixelBufferRef> result;
+    std::optional<RetainPtr<CVPixelBufferRef>> result;
+    RetainPtr<CVPixelBufferRef> pixelBuffer;
     if (m_player)
-        result = m_player->pixelBufferForCurrentTime();
+        pixelBuffer = m_player->pixelBufferForCurrentTime();
+    if (m_pixelBufferForCurrentTime != pixelBuffer) {
+        result = pixelBuffer;
+        m_pixelBufferForCurrentTime = WTFMove(pixelBuffer);
+    }
     completionHandler(WTFMove(result));
 }
+#endif
 
 } // namespace WebKit
 
